ensure add icon visible

--- a/frontend/src/app/modules/calendar/te-calendar/te-calendar.component.sass
+++ b/frontend/src/app/modules/calendar/te-calendar/te-calendar.component.sass
@@ -47,10 +47,10 @@
       background: #dfdfdf
 
     .fc-content
-      position: absolute
+      position: sticky
       color: black
       width: 100%
-      bottom: 0
+      top: 200px
       font-weight: normal
       font-size: 1.5rem
 
